--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -173,7 +173,10 @@ nav .icon-burger .line {
   flex-direction: column;
   align-items: center;
   width: max-content;
-  margin: auto;
+  margin: 100px auto;
+  border-radius: 5px;
+  box-shadow: 0px 0px 4px 0px black;
+  padding: 30px 50px;
 }
 
 .signup-options {
@@ -225,7 +228,7 @@ input[type="email"],
 input[type="tel"],
 input[type="password"],
 button {
-  width: 100%;
+  width: 90%;
   margin-bottom: 10px;
   padding: 8px;
   border: 1px solid #ccc;
@@ -243,7 +246,7 @@ button:hover {
 }
 
 textarea {
-  width: 100%;
+  width: 90%;
   height: 100px;
   margin-bottom: 10px;
   padding: 8px;
@@ -268,6 +271,8 @@ textarea {
   padding: 40px;
   text-align: center;
   border-radius: 8px;
+  box-shadow: 0px 0px 4px 0px black;
+  padding: 30px 50px;
 }
 
 .login-container h1 {
@@ -297,9 +302,19 @@ textarea {
   background-color: #0056b3;
 }
 
+.login-user {
+  display: flex;
+  gap: 10px;
+}
+
+.login-user label {
+  display: flex;
+}
+
 .privacy-statement {
   margin-top: 20px;
   font-size: 14px;
+  text-align: center;
 }
 
 .privacy-statement a {
