--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -540,7 +540,7 @@ textarea {
   margin-right: 20px;
 }
 
-.info {
+.basic-info {
   font-size: 20px;
 }
 
@@ -556,13 +556,16 @@ textarea {
 .booking-item h3 {
   margin-bottom: 5px;
 }
-.tecntians {
+.technician {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  box-shadow: 0 0 2px 0 black;
+  margin: 20px auto;
 }
 .service-form {
-  max-width: 400px;
+  width: 400px;
   margin: 20px auto;
   background-color: #fff;
   padding: 20px;
@@ -613,6 +616,13 @@ textarea {
 
 .button_is_hidden {
   display: none;
+}
+
+.booking-delete {
+  background-color: red;
+  display: block;
+  margin: 10px auto;
+  width: 50%;
 }
 
 /* .cancel-button {
